<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#333333"
        android:text="@string/tvshowname"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColorHighlight="@android:color/white"
        android:textColorLink="@android:color/white"
        android:clickable="false" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewLovedPerc" >

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="70dp"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/poster" />

            <ImageView
                android:id="@+id/watchlist"
                android:layout_width="25dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/icon_watchlist_color" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:gravity="top" >

            <ImageView
                android:id="@+id/imageViewSeen"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/seen"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/icon_love" />

            <TextView
                android:id="@+id/textViewLovedPerc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/imageView1"
                android:text="@string/percentage"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/imageView1"
                android:text="@string/votes"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/darker_gray"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textViewVotes"
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceSmall" 
                android:paddingLeft="2dp"/>

        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >
    </RelativeLayout>

</LinearLayout>