<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <GridView
        android:id="@+id/gridview"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:background="@drawable/bglinen"
        android:columnWidth="60dp"
        android:gravity="center_horizontal"
        android:horizontalSpacing="20dp"
        android:numColumns="3"
        android:padding="10dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="20dp" >
    </GridView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:background="#E8E8DC"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/trendingshows"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewSeeMoreTrending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/seemore"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#008FBB" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayoutGalleryTrending"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="bottom"
        android:gravity="center_vertical" >

        <Gallery
            android:id="@+id/galleryTrending"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp" >

            <ProgressBar
                android:id="@+id/progressBarGalleryTrending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewUpdating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/updating"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>