<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="200dp"
    android:layout_height="120dp"
    android:background="#E8E8DC"
    android:orientation="vertical">
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="200dp" android:layout_height="120dp"><ImageView
            android:id="@+id/imageViewEpisode"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:contentDescription="@string/show"
            android:src="@drawable/placeholder" />

        <LinearLayout android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_alignParentLeft="true" android:background="#80000000" android:orientation="vertical">
            <TextView android:id="@+id/textViewShowName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show" android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@android:color/white" android:textColorHighlight="@android:color/white" android:textStyle="bold"/>
            <LinearLayout android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:id="@+id/textViewEpisodeNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/epsiodenumber" android:textColor="#008FBB" android:textColorHighlight="#008FBB" android:textStyle="bold"/>
                <TextView android:id="@+id/textViewEpisodeName" android:layout_width="fill_parent" android:layout_height="20dp" android:paddingLeft="2dp" android:text="@string/episodeTitle" android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewCalendarSeen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/seen" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="200dp"
        android:layout_height="120dp" >

        <ImageView
            android:id="@+id/imageViewEpisode"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:contentDescription="@string/show"
            android:src="@drawable/placeholder" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#80000000"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewShowName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/white"
                android:textColorHighlight="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewEpisodeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/epsiodenumber"
                    android:textColor="#008FBB"
                    android:textColorHighlight="#008FBB"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewEpisodeName"
                    android:layout_width="fill_parent"
                    android:layout_height="20dp"
                    android:paddingLeft="2dp"
                    android:text="@string/episodeTitle"
                    android:textColor="@android:color/white"
                    android:textColorHighlight="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>